--- a/template.yaml
+++ b/template.yaml
@@ -25,10 +25,12 @@ Resources:
         - x86_64
       Events:
         HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Type: Api
           Properties:
-            Path: /hello
-            Method: get
+            Path: /sentiment
+            Method: post
+      Policies:
+          - AmazonComprehendFullAccess
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
