--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,11 @@
   "image": "mcr.microsoft.com/devcontainers/python:3.9",
   "features": {
     "ghcr.io/devcontainers/features/aws-cli:1": {},
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {
+      "moby": false
+    }
   },
-  "postCreateCommand": "pip install --user aws-sam-cli && sudo apt-get update && sudo apt-get install -y jq",
+  "postCreateCommand": "pip install --user aws-sam-cli",
   "customizations": {
     "vscode": {
       "extensions": [
